# aws_small_house_world

./: CMakeLists.txt  README_en.md  install.sh  package.xml
launch/: small_house.launch.py
models/aws_robomaker_residential_AirconditionerA_01/: model.config  model.sdf
models/aws_robomaker_residential_AirconditionerB_01/: model.config  model.sdf
models/aws_robomaker_residential_BalconyTable_01/: model.config  model.sdf
models/aws_robomaker_residential_Ball_01/: model.config  model.sdf
models/aws_robomaker_residential_Bed_01/: model.config  model.sdf
models/aws_robomaker_residential_Board_01/: model.config  model.sdf
models/aws_robomaker_residential_Carpet_01/: model.config  model.sdf
models/aws_robomaker_residential_ChairA_01/: model.config  model.sdf
models/aws_robomaker_residential_ChairD_01/: model.config  model.sdf
models/aws_robomaker_residential_Chandelier_01/: model.config  model.sdf
models/aws_robomaker_residential_CoffeeTable_01/: model.config  model.sdf
models/aws_robomaker_residential_CookingBench_01/: model.config  model.sdf
models/aws_robomaker_residential_Curtain_01/: model.config  model.sdf
models/aws_robomaker_residential_DeskPortraitA_01/: model.config  model.sdf
models/aws_robomaker_residential_DeskPortraitA_02/: model.config  model.sdf
models/aws_robomaker_residential_DeskPortraitB_01/: model.config  model.sdf
models/aws_robomaker_residential_DeskPortraitB_02/: model.config  model.sdf
models/aws_robomaker_residential_DeskPortraitC_01/: model.sdf
worlds/: small_house.world
(+99 files in other folders)
